<resources>
    <string name="app_name">ApplicationGuests</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="help">Help</string>
    <string name="all_guests">All Guests</string>
    <string name="all_presents">All Guests Presents</string>
    <string name="all_absents">All Absents Guests </string>
    <string name="name">Name:</string>
    <string name="full_name">Full name</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="finish">Finish</string>
    <string name="presence">Presence:</string>
    <string name="select_a_category">Select a category:</string>
    <string name="convidados">Convidados</string>
</resources>