<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all_guests">

    <fragment
        android:id="@+id/nav_all_guests"
        android:name="com.example.applicationguests.listguests.allguests.AllGuestsFragment"
        android:label="@string/all_guests"
        tools:layout="@layout/fragment_allguests" />

    <fragment
        android:id="@+id/nav_all_presents"
        android:name="com.example.applicationguests.listguests.presents.AllPresentsFragment"
        android:label="@string/all_presents"
        tools:layout="@layout/fragment_allpresents" />

    <fragment
        android:id="@+id/nav_all_absents"
        android:name="com.example.applicationguests.listguests.absents.AllAbsentsFragment"
        android:label="@string/all_absents"
        tools:layout="@layout/fragment_allabsents" />
</navigation>