<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GuestFormActivity"
    android:layout_margin="32dp">

    <TextView
        android:textColor="@color/black"
        android:id="@+id/text_name"
        android:text="@string/full_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

    </TextView>

    <EditText
        android:textColorHint="@color/white"
        android:hint="@string/full_name"
        android:autofillHints="name"
        android:id="@+id/edit_name"
        android:textSize="20sp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

    </EditText>

    <TextView
        app:layout_constraintBottom_toBottomOf="@+id/radio_group"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"
        android:textColor="@color/black"
        android:id="@+id/text_present"
        android:text="@string/presence"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

    </TextView>

    <RadioGroup
        android:id="@+id/radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_present"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/radio_present"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:text="@string/present"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </RadioButton>

    <RadioButton
        android:id="@+id/radio_absent"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:text="@string/absent"
        app:layout_constraintTop_toBottomOf="@+id/radio_present"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </RadioButton>

    </RadioGroup>

    <Button
        android:id="@+id/button_finish"
        android:layout_marginTop="32dp"
        android:text="@string/finish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>